--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 # 全局 API 地址
 # VITE_GLOBAL_API="http://localhost:6688"
-VITE_GLOBAL_API="http://rui200.cn:6688"
+VITE_GLOBAL_API="http://www.3651809.cn:16688"
 
 # ICP 备案号
 VITE_ICP = "豫ICP备2022018134号-1"
